force-app/main/default/objects/Line_Item__c/Line_Item__c.object-meta.xml
<CustomObject>
    <description>WAREHOUSE</description>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>