force-app/main/default/objects/Line_Item__c/fields/Units_Sold__c.field-meta.xml
<CustomField>
    <fullName>Units_Sold__c</fullName>
    <description>Des of Units Sold</description>
    <inlineHelpText>..............................</inlineHelpText>
    <label>Units Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>