force-app/main/default/objects/Line_Item__c/validationRules/Order_in_stock_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_in_stock_New</fullName>
    <active>false</active>
    <errorConditionFormula>Merchandise__r.Total_Inventory__c &lt; Units_Sold__c</errorConditionFormula>
    <errorDisplayField>Units_Sold__c</errorDisplayField>
    <errorMessage>You have ordered more items than we have in stock</errorMessage>
</ValidationRule>